# Adsorption

./: .gitignore  pyproject.toml
.github/workflows/: pytest.yml
adsorption/: __init__.py  _interface.py  calculator.py  interface.py  rotation.py
adsorption/_core/: __init__.py  abc.py  interface.py
adsorption/attempt/: __init__.py
adsorption/optmization/: _interface.py
results/png/: plot.py
results/png_guess_opt_total/: plot.py
results/xyz/: CH4_e_top_guess.xyz  CH4_s_fcc_guess.xyz  CH4_s_top_guess.xyz  CH4_v_fcc_guess.xyz  CO_e_fcc_guess.xyz  CO_e_top_guess.xyz  CO_s_fcc_guess.xyz  CO_s_top_guess.xyz  CO_v_bri_guess.xyz  CO_v_fcc_guess.xyz  H2O_e_bri_guess.xyz  H2O_e_fcc_guess.xyz  H2O_s_bri_guess.xyz  H2O_s_fcc_guess.xyz  H2O_s_top_guess.xyz  H2O_v_fcc_guess.xyz  O_e_top_guess.xyz  O_s_fcc_guess.xyz  O_v_fcc_guess.xyz
tests/: OctCu10.xyz  OctCu8.xyz  test_add_adsorbate.py  test_adsorption.py  test_rotation.py
tests/notebooks/: rotation_and_kabsch.ipynb
tests/results/xyz/: CH4_e_bri_guess.xyz  CH4_e_fcc_guess.xyz  CH4_s_bri_guess.xyz  CH4_v_bri_guess.xyz  CH4_v_top_guess.xyz  CO_e_bri_guess.xyz  CO_s_bri_guess.xyz  CO_v_top_guess.xyz  H2O_e_top_guess.xyz  H2O_v_bri_guess.xyz  H2O_v_top_guess.xyz  O_e_bri_guess.xyz  O_e_fcc_guess.xyz  O_s_bri_guess.xyz  O_s_top_guess.xyz  O_v_bri_guess.xyz  O_v_top_guess.xyz
